@@ -1,4 +1,7 @@
 [12.5] released . . .
+* Fixed a condition that caused mailx to hang when looking at a message,
+  copying that message, and issuing a "z" command evaluating an uncached
+  portion of an IMAP folder.
 * When executing an "account" command, ensure that the values of the "hold",
   "keepsave", "append", and "emptybox" variables remain those of the previous
   account for all outstanding operations on that account (bug reported by
